5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1680_1949.log
== TEST (2019-06-30 12:23:53) 
-- CODE:
x = int(input())
y = int(input())

print(x//10 and x%10)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:24:23) 
-- CODE:
x = int(input())
y = int(input())

print(x//10,x%10)
-- OUTPUT:
5 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:24:45) 
-- CODE:
x = int(input())
y = int(input())

print(x//10,x%10)
-- OUTPUT:
5 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:24:47) 
-- CODE:
x = int(input())
y = int(input())

print(x//10,x%10)
-- OUTPUT:
5 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:24:57) 
-- CODE:
x = int(input())
y = int(input())

print(x//10,x%10)
-- OUTPUT:
5 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:31:59) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou R$ 100.000,00")
if a == d and b == c:
	print("Ganhou R$ 50.000,00")
if (a == c or a == d) and (b != c and b != d) or (a != c or a != d) and (b == c or b == d):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
Ganhou R$ 50.000,00
Perdeu
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:24) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou R$ 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou R$ 50.000,00")
	else:
		print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:40) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou Rs 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou Rs 50.000,00")
	else:
		print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:42) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou Rs 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou Rs 50.000,00")
	else:
		print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:43) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou Rs 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou Rs 50.000,00")
	else:
		print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:45) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou Rs 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou Rs 50.000,00")
	else:
		print("Ganhou Rs1.000,00")
else
	print("Perdeu")
-- ERROR:
File "XXXX", line 16
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:37:47) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10

if a == c and b == d:
	print("Ganhou Rs 100.000,00")
else:
	if a == d and b == c:
		print("Ganhou Rs 50.000,00")
	else
		print("Ganhou Rs1.000,00")
else
	print("Perdeu")
-- ERROR:
File "XXXX", line 14
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:39:36) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if a!= c and a != d and b != c and b!= d:
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Perdeu
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:39:58) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou Rs 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:40:04) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou Rs 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 12:40:09) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.628516
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou Rs 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou Rs1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:40:13) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou Rs 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:40:19) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou Rs 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou Rs 50.000,00")
		else:
			print("Ganhou Rs1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou Rs 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 12:40:38) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou R$ 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou R$ 50.000,00")
		else:
			print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 12:40:43) 
-- CODE:
x = int(input())
y = int(input())

a = x//10
b = x%10
c = y//10
d = y%10
if not(a!= c and a != d and b != c and b!= d):
	if a == c and b == d:
		print("Ganhou R$ 100.000,00")
	else:
		if a == d and b == c:
			print("Ganhou R$ 50.000,00")
		else:
			print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.803157
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
